tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__SpeedUpYourPlant-AAAAAAAAAAAAAAAAAAAC0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 722,
  "prerequisites": [
    543,
    719
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To speed up the growth process a bit you can use a fertilizer. You will note, however, that bone meal no longer works. A bit of ash, apatite or calcite mixed with some water in a chemical reactor will give you the fertilizer you need. Apply by hand.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Speed Up Your Plant Growth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    543,
    719
  ],
  "rewards": [],
  "tasks": []
}
