tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__SugarTheGatherin-AAAAAAAAAAAAAAAAAAAFAg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1282,
  "optional_prerequisites": [
    1283,
    1277
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Stockpiling sugar might be a good idea if you have a sweet tooth. Or not?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sugar: The Gathering",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
