tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__TheGroundisCryin-AAAAAAAAAAAAAAAAAAAHBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1798,
  "prerequisites": [
    1607
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Need an alternate source of Chlorine? Breed some Tearstalks to get Ghast Tears for making salt water.\n\n;-;\n\nNether warts should yield tearstalks.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Ground is Crying",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1607
  ],
  "rewards": [],
  "tasks": []
}
